--- a/templates/instructor.html
+++ b/templates/instructor.html
@@ -699,6 +699,7 @@
         let users = {};
         let userAnswers = {};
         let userCount = 0;
+        let pollInterval = null;
 
         function startPolling() {
             // Poll every 2 seconds for updates
